# 15-puzzle-solver

./: .gitignore  Cargo.toml
.github/workflows/: rust-tests.yml
benches/: algorithms.rs  extensive.rs
benches/shared/: mod.rs
solver/: Cargo.toml
solver/src/: board.rs
solver/src/board/: mod.rs  parsing.rs
src/: lib.rs  main.rs  parity.rs
src/board/: mod.rs  owned.rs  parsing.rs  sub_board.rs  visited.rs
src/solving/: mod.rs  movegen.rs  parity.rs  visited.rs
src/solving/algorithm/: astar.rs  bestfs.rs  bfs.rs  dfs.rs  heuristic.rs  heuristics.rs  mod.rs
src/solving/algorithm/heuristic/: astar.rs  bestfs.rs  heuristics.rs
tests/: astar.rs  bfs.rs  dfs.rs  ida.rs  idfs.rs  sma.rs
tests/shared/: mod.rs
