[package]
name = "solver"
authors = ["Jakub Pawlak <234767@edu.p.lodz.pl>", "Juliusz Szymajda <234769@edu.p.lodz.pl>"]
description = "CLI Application for solving 15-puzzle using different algorithms"
repository = "https://github.com/KubaPawlak/15-puzzle-solver"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "algorithms"
harness = false

[[bench]]
name = "extensive"
harness = false

[features]
stack-expansion = []

[dependencies]
bit-set = "0.5"
stacker = "0.1"
clap = {version = "4", features = ["derive"]}
log = {version = "0.4", features = ["release_max_level_info"]}
simple_logger = {version = "4", features = ["colors", "stderr", "timestamps"]}
time = "0.3"


[dev-dependencies]
criterion = "0.5"
itertools = "0.12"

[lints.rust]
private_interfaces = "deny"

[lints.clippy]
correctness = "deny"
suspicious_map = "deny"
suspicious_unary_op_formatting = "deny"
swap_ptr_to_ref = "deny"
drop_non_drop = "deny"
empty_loop = "deny"
lines_filter_map_ok = "deny"
multi_assignments = "deny"
boxed_local = "deny"
cmp_owned = "deny"
drain_collect = "deny"
expect_fun_call = "deny"
extend_with_drain = "deny"
format_collect = "deny"
iter_nth = "deny"
iter_overeager_cloned = "deny"
large_enum_variant = "deny"
manual_memcpy = "deny"
useless_vec = "deny"
vec_init_then_push = "deny"
slow_vector_initialization = "deny"
assertions_on_constants = "deny"
assign_op_pattern = "deny"
blocks_in_if_conditions = "deny"
bool_assert_comparison = "deny"
borrow_interior_mutable_const = "deny"
builtin_type_shadow = "deny"
chars_last_cmp = "deny"
collapsible_else_if = "deny"
collapsible_if = "deny"
collapsible_match = "deny"
comparison_chain = "deny"
comparison_to_empty = "deny"
double_must_use = "deny"
double_neg = "deny"
duplicate_underscore_argument = "deny"
enum_variant_names = "deny"
excessive_precision = "deny"
field_reassign_with_default = "deny"
filter_map_bool_then = "deny"
fn_to_numeric_cast = "deny"
for_kv_map = "deny"
implicit_saturating_add = "deny"
implicit_saturating_sub = "deny"
infallible_destructuring_match = "deny"
init_numbered_fields = "deny"
into_iter_on_ref = "deny"
just_underscores_and_digits = "deny"
len_zero = "deny"
let_and_return = "deny"
let_unit_value = "deny"
main_recursion = "deny"
manual_bits = "deny"
manual_is_finite = "deny"
manual_map = "deny"
manual_saturating_arithmetic = "deny"
manual_range_contains = "deny"
match_overlapping_arm = "deny"
match_ref_pats = "deny"
match_result_ok = "deny"
mem_replace_option_with_none = "deny"
missing_safety_doc = "deny"
mixed_case_hex_literals = "deny"
module_inception = "deny"
must_use_unit = "deny"
needless_borrow = "deny"
needless_else = "deny"
needless_late_init = "deny"
needless_parens_on_range_literals = "deny"
needless_range_loop = "deny"
needless_return = "deny"
needless_return_with_question_mark = "deny"
neg_multiply = "deny"
new_ret_no_self = "deny"
obfuscated_if_else = "deny"
ok_expect = "deny"
print_literal = "deny"
question_mark = "deny"
redundant_closure = "deny"
redundant_field_names = "deny"
unnecessary_fold = "deny"
trim_split_whitespace = "deny"
unused_unit = "deny"
while_let_on_iterator = "deny"
zero_ptr = "deny"
unnecessary_owned_empty_strings = "deny"
unnecessary_mut_passed = "deny"
unnecessary_lazy_evaluations = "deny"
if_not_else = "deny"
implicit_clone = "deny"
manual_assert = "deny"
mut_mut = "deny"
match_bool = "deny"
ref_binding_to_reference = "deny"
ref_option_ref = "deny"
too_many_lines = "warn"
unnecessary_wraps = "warn"
cognitive_complexity = "warn"
manual_clamp = "warn"
option_if_let_else = "warn"
panic = "warn"
panic_in_result_fn = "deny"
manual_let_else = "warn"
same_functions_in_if_condition = "warn"
trivial_regex = "warn"